--- a/frontend/agendapp/src/app/components/editar/editar.component.html
+++ b/frontend/agendapp/src/app/components/editar/editar.component.html
@@ -1,1 +1,21 @@
-<p>editar works!</p>
+<section id="nav_medico">
+  <!-- Header de usuario -->
+  <app-navbarusuariologueado></app-navbarusuariologueado>
+</section>
+
+<!-- Main -->
+<div class="main">
+  <section id="fraseBienvenida">
+    <div class="container fraseBienvenida">
+      <h2>Configurar Servicios</h2>
+    </div>
+  </section>
+
+
+</div>
+
+
+<!-- Footer generico -->
+<section id="nav-footer">
+  <app-footer class="fixed-bottom"></app-footer>
+</section>
