Segunda entrega del modulo administrador: modales para agregar horario y categoria funcionando, modal editar usuarios, ediciones en linea en componente configuraciones

--- a/frontend/agendapp/src/app/components/buscar-usuarios/buscar-usuarios.component.css
+++ b/frontend/agendapp/src/app/components/buscar-usuarios/buscar-usuarios.component.css
@@ -60,3 +60,15 @@ li {
     text-decoration: none;
     list-style: none;
 }
+
+img {
+    width: 1.2rem;
+    margin-right: 10px;
+    height: auto;
+    object-fit: cover;
+}
+
+span.icono-editar {
+    cursor: pointer;
+    width: 10px;
+}
