--- a/frontend/agendapp/src/app/components/buscar/buscar.component.html
+++ b/frontend/agendapp/src/app/components/buscar/buscar.component.html
@@ -34,10 +34,10 @@
   <table class="table table-sm mx-auto">
     <thead>
       <tr class="col">
-        <th>ID</th>
-        <th>Nombre y Apellido</th>
-        <th>DNI</th>
-        <th>Email</th>
+        <th style="width: 6rem;">ID</th>
+        <th  style="width: 15rem;">Nombre y Apellido</th>
+        <th style="width: 9rem;">DNI</th>
+        <th style="width: 10rem;">Email</th>
       </tr>
     </thead>
     <tbody>
