--- a/frontend/agendapp/src/app/components/turno/turno.component.html
+++ b/frontend/agendapp/src/app/components/turno/turno.component.html
@@ -47,7 +47,7 @@
           [(ngModel)]="turno.hora"
           (change)="onChangeHorario($event)"
         >
-        <option value="0" id="id_auxiliar" type="hidden"></option>
+          <option value="" id="id_auxiliar" type="hidden" readonly>Elija un rango</option>
           @for(hora of horarios; track hora.idHorario){
           <option
             class="option-menu"
@@ -61,29 +61,24 @@
       </div>
       <!-- input select con los horarios segun rango seleccionado -->
       <div class="wrapper mb-2">
-        <label for="horaCita"
-          ><small>Elija un horario</small></label
-        >
+        <label for="horaCita"><small>Elija un horario</small></label>
         <select
-        class="form-select"
-        aria-label="Elija un horario"
-        name="horaCita"
-        [(ngModel)]="turno.horaCita"
-        (click)="verDato(turno.horaCita)"
-        
+          class="form-select"
+          aria-label="Elija un horario"
+          name="horaCita"
+          [(ngModel)]="turno.horaCita"
         >
-        @if(rangoHoras.length > 0){
-          @for(hora of rangoHoras; track $index){
+          <!-- (click)="verDato(turno.horaCita)" -->
+          @if(rangoHoras.length > 0){ @for(hora of rangoHoras; track $index){
           <option class="option-menu" selected [id]="$index" [ngValue]="hora">
             {{ hora }}:00
           </option>
-          }
-        }
+          } }
         </select>
       </div>
       <!-- input motivo de la consulta -->
       <div class="wrapper mb-2">
-          <label for="horaCita"
+        <label for="horaCita"
           ><small>Escriba el motivo de consulta</small></label
         >
         <textarea
