- service sweetalert added - notifications and alerts added to mulitple components - added some input validations in the registration form

--- a/frontend/agendapp/src/app/components/registro/registro.component.html
+++ b/frontend/agendapp/src/app/components/registro/registro.component.html
@@ -4,11 +4,13 @@
 <div
   class="container d-flex flex-column justify-content-center align-items-center mt-2"
 >
-  <form #form="ngForm" (ngSubmit)="enviarRegistroUsuario(form)"> 
+  <form #form="ngForm" (ngSubmit)="enviarRegistroUsuario(form)">
     <div class="card bg-transparent border-0">
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
           <input
+            minlength="4"
+            maxlength="100"
             class="form-control"
             type="text"
             name="nombre"
@@ -18,6 +20,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="4"
+            maxlength="100"
             class="form-control"
             type="text"
             name="apellido"
@@ -27,6 +31,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="100"
             class="form-control"
             type="email"
             name="email"
@@ -36,6 +42,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="20"
             class="form-control"
             type="text"
             name="telefono"
@@ -45,6 +53,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="20"
             class="form-control"
             type="text"
             name="dni"
@@ -54,6 +64,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="100"
             class="form-control"
             type="password"
             name="password"
@@ -96,6 +108,8 @@
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
           <input
+            minlength="4"
+            maxlength="100"
             class="form-control"
             type="text"
             name="nombre"
@@ -105,6 +119,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="4"
+            maxlength="100"
             class="form-control"
             type="text"
             name="apellido"
@@ -114,6 +130,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="100"
             class="form-control"
             type="email"
             name="email"
@@ -123,6 +141,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="20"
             class="form-control"
             type="text"
             name="telefono"
@@ -132,6 +152,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="20"
             class="form-control"
             type="text"
             name="dni"
@@ -141,6 +163,8 @@
         </div>
         <div class="wrapper mb-2">
           <input
+            minlength="5"
+            maxlength="100"
             class="form-control"
             type="password"
             name="password"
