--- a/frontend/agendapp/src/app/components/configuraciones/settings.component.html
+++ b/frontend/agendapp/src/app/components/configuraciones/settings.component.html
@@ -7,6 +7,11 @@
   (categoriaAgregada)="categoriaAgregadaHandler($event)"
 ></app-modal-categoria>
 
+<!-- Modal Editar Cita -->
+<app-modal-editarcita
+  (citaEditada)="citaEditadaHandler($event)"
+></app-modal-editarcita>
+
 <section id="nav_medico">
   <!-- Header de usuario -->
   <app-navbarusuariologueado></app-navbarusuariologueado>
@@ -44,7 +49,7 @@
       </thead>
       <tbody>
         @for(hora of horarios; track hora.idHorario){
-        <tr (click)="verPorSuId(hora.idHorario)">
+        <tr (click)="verDataIdHora(hora)">
           <td>{{ hora.idHorario }}</td>
           @if(!hora.isEditable){
           <td>{{ hora.rango }}</td>
@@ -108,7 +113,7 @@
       </thead>
       <tbody>
         @for(esp of especialidades; track esp.idCategoria){
-        <tr (click)="verPorSuId(esp.idCategoria)">
+        <tr (click)="verDataIdCategoria(esp)">
           <td>{{ esp.idCategoria }}</td>
           @if(!esp.isEditable){
           <td>{{ esp.nombre }}</td>
@@ -123,8 +128,7 @@
               id="categoria"
             />
           </td>
-          }
-          @if(esp.imgSrc){
+          } @if(esp.imgSrc){
           <td>{{ esp.imgSrc }}</td>
           }@else {
           <td>Sin logo</td>
@@ -159,6 +163,7 @@
       <h4>Citas</h4>
       <span
         type="button"
+        (click)="abrirModalEditarCita()"
         class="badge rounded-pill text-bg-success"
         title="Agregar +"
         >Agregar +</span
@@ -178,19 +183,19 @@
       </thead>
       <tbody>
         @for(cita of citas; track cita.idCita){
-        <tr (click)="verPorSuId(cita.idCita)">
+        <tr (click)="verDataIdCita(cita)">
           <td>{{ cita.idCita }}</td>
           <td>{{ cita.fecha | date : "dd/MM/yy" }}</td>
           <td>{{ cita.hora }}</td>
           <td>{{ cita.idPaciente }}</td>
           <td>{{ cita.idMedico }}</td>
           <td>{{ cita.motivoConsulta }}</td>
-          <!-- <td style="width: 6rem">
+          <td>
             <span class="icono-editar">
               <img
-                src="../../../assets/img/edit.svg"
+                src="../../../assets/img/eye-password-show.svg"
                 alt="icono-editar"
-                (click)="editar(cita.idCita)"
+                (click)="abrirModalEditarCita()"
               />
             </span>
             <span class="icono-eliminar">
@@ -200,7 +205,7 @@
                 (click)="eliminar(cita.idCita)"
               />
             </span>
-          </td> -->
+          </td>
         </tr>
         }
       </tbody>
