unificado los login y routerLinks

--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
@@ -13,7 +13,7 @@
         class="btn btn-outline-dark btn-lg rounded-pill px-5"
         type="button"
         title="Iniciar sesion"
-        [routerLink]="['/login_usuarios']"
+        [routerLink]="['/login']"
       >
         Iniciar Sesión
       </button>
