--- a/frontend/agendapp/src/app/components/login/login.component.html
+++ b/frontend/agendapp/src/app/components/login/login.component.html
@@ -2,9 +2,10 @@
 <app-navbar></app-navbar>
 }
 <div
-  class="container d-flex flex-column justify-content-center align-items-center mt-2"
+  class="container d-flex flex-column justify-content-center align-items-center mt-4"
 >
-  <form #form="ngForm" (ngSubmit)="submit(form)">
+<h1 class="mt-4">Bienvenido de vuelta !</h1>
+  <form #form="ngForm" (ngSubmit)="login(form)">
     <div class="card bg-transparent border-0">
       <div class="card-body m-0 p-0">
         <div class="wrapper mb-2">
@@ -51,7 +52,7 @@
         <div
           class="container d-flex flex-column justify-content-center align-items-center"
         >
-          <div
+        <div
             class="d-flex flex-column justify-content-center align-items-center mt-3"
           >
             <input
@@ -59,7 +60,6 @@
               type="submit"
               value="Iniciar Sesión"
             />
-            <a [routerLink]="['/login_medicos']">Soy Médico</a>
           </div>
           <div class="d-flex flex-column">
             <a
