--- a/frontend/agendapp/src/app/components/registro/registro.component.html
+++ b/frontend/agendapp/src/app/components/registro/registro.component.html
@@ -88,7 +88,7 @@
             <a class="mb-3 pe-5" [routerLink]="['/registro_medicos']"
               >Soy Médico</a
             >
-            <a class="mb-3" [routerLink]="['/login_usuarios']"
+            <a class="mb-3" [routerLink]="['/login']"
               >Ya estoy registrado</a
             >
           </div>
@@ -221,7 +221,7 @@
             />
           </div>
           <div class="d-flex flex-row">
-            <a class="mb-3" [routerLink]="['/login_usuarios']"
+            <a class="mb-3" [routerLink]="['/login']"
               >Ya estoy registrado</a
             >
           </div>
