--- a/frontend/agendapp/src/app/shared/navbar/navbar.component.html
+++ b/frontend/agendapp/src/app/shared/navbar/navbar.component.html
@@ -7,8 +7,7 @@
     [ngClass]="{
       'navbar-registro-usuario': section === 'registro_usuarios',
       'navbar-registro-medico': section === 'registro_medicos',
-      'navbar-login-usuario': section === 'login_usuarios',
-      'navbar-login-medico': section === 'login_medicos'
+      'navbar-login-usuario': section === 'login'
     }"
   >
     <a [routerLink]="['/']">
@@ -23,21 +22,10 @@
     <h2 class="mx-auto">Nueva Cuenta</h2>
     } @else if(section === 'registro_medicos'){
     <h2 class="mx-auto">Nueva Cuenta</h2>
-    }@else if(section === 'login_usuarios'){
-    <h2 class="mx-auto">Inicio de Sesión</h2>
-    }@else if(section === 'login_medicos'){
+    }@else if(section === 'login'){
     <h2 class="mx-auto">Inicio de Sesión</h2>
     }
-  </nav>
-
-  @if (section === 'login_usuarios') {
-  <div class="container fraseBienvenida">
-    <h3>Bienvenido De Vuelta!</h3>
-  </div>
-  }@else if(section === 'login_medicos'){
-  <div class="container fraseBienvenida">
-    <h3>Bienvenido Dr/Dra!</h3>
-  </div>
-  }
+   
+  </nav>  
 </section>
 }
